@@ -1,6 +1,6 @@
 ./configure \
-	CFLAGS="-O2 -march=i686" \
-	CXXFLAGS="-O2 -march=i686" \
+	CFLAGS="-O2 -Wall -march=i686 -fomit-frame-pointer -fno-strict-aliasing -fno-strict-overflow" \
+	CXXFLAGS="-O2 -Wall -march=i686 -fomit-frame-pointer -fno-strict-aliasing -fno-strict-overflow" \
 	LDFLAGS="-s" \
-	--host=i686-pc-mingw32 --build=`./config.guess` $@
+	--host=i686-w64-mingw32.static --build=`./config.guess` $@
 
