@@ -1,6 +1,13 @@
 Name
 	advscan - History For AdvanceSCAN
 
+AdvanceSCAN Version 1.19 2016/11
+	) Windows binaries built with MingW 4.9.3 using the MXE cross compiler at
+		commit 62bcdbee56e87c81f1faa105b8777a5879d4e2e with targets
+		i686-w64-mingw32 and x86_64-w64-mingw32.
+	) DOS binaries built with DJGPP 4.8.5 from
+		https://github.com/andrewwutw/build-djgpp
+
 AdvanceSCAN Version 1.18 2015/08
 	) Updated to new autoconf/git format.
 	) Other minor changes.
